--- a/danci.html
+++ b/danci.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Výrobky z paroží – Domů</title>
+  <title>Dančí trofeje</title>
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
 <body>
-
   <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
   <div class="top-bar">
     <div class="top-bar-container">
@@ -32,19 +31,19 @@
       </div>
     </div>
   </div>
-  
 
   <header>
     <nav>
       <ul>
-        <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-        <li class="create-trofej-nav">
+         <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
+         <li class="create-trofej-nav">
           <a href="kontakt.html" class="create-trofej-btn-nav">
             Chci vytvořit svou trofej
           </a>
         </li>
         
         <li><a href="index.html">Domů</a></li>
+  
         <li class="dropdown">
           <a href="trofeje.html">Trofeje</a>
           <ul class="dropdown-menu">
@@ -60,43 +59,44 @@
             <li><a href="opasky.html">Opasky</a></li>
             <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
           </ul>
+          <li><a href="pred-po.html">Před a Po</a></li>
         </li>
-        <li><a href="pred-po.html">Před a Po</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
+<main>
+  <h1>Daněk</h1>
+  <p>Naše výrobky...</p>
 
-  <!-- Karusel s overlay textem -->
-  <section class="carousel">
-    <div class="carousel-container">
-      <img src="Fotky/karusel_1.jpg" alt="Výrobek 1">
-      <img src="Fotky/karusel_2.jpg" alt="Výrobek 2">
-      <img src="Fotky/karusel_3.jpg" alt="Výrobek 3">
-    </div>
-    <div class="carousel-controls">
-      <button id="prev">&#10094;</button>
-      <button id="next">&#10095;</button>
-    </div>
 
-    <!-- Overlay text (hero text) -->
-    <div class="hero-text">
-      <h1>Ruční výroba z paroží</h1>
-      <p>Jedinečné trofeje a lovecké doplňky</p>
-      <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
-    </div>
-  </section>
-
-  <main>
-    <section class="uvod">
-      <p>Vítejte na našem webu s ručními výrobky z paroží! Nabízíme trofeje, nože, opasky a další doplňky.</p>
-      <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
-    </section>
-  </main>
-  </main>
-  <footer class="normal-footer">
-    © 2025 Trofeje od Káči. Všechna práva vyhrazena.
-  </footer>
+<!-- Galerie obrázků (pokud chceš) -->
+<div class="product-gallery">
+  <figure>
+    <img src="Fotky\Daněk\0f38236f-fcf8-4aef-a108-6ead5d0a246f.jpg" alt="Jelení trofej 1">
+    <figcaption>Dančí trofej</figcaption>
+  </figure>
+  <figure>
+    <img src="Fotky\Daněk\4ef595a0-fae6-4343-a966-9c408eec465a.jpg" alt="Jelení trofej 2">
+    <figcaption>Dančí trofej</figcaption>
+  </figure>
+  <figure>
+    <img src="Fotky\Daněk\a8d07fcc-113b-4467-809a-9cea8cc6eef9.jpg" alt="Jelení trofej 3">
+    <figcaption>Dančí trofej</figcaption>
+  </figure>
+  <figure>
+    <img src="Fotky\Daněk\e774424c-eac6-4a9e-8a65-86a59e09a83a.jpg" alt="Jelení trofej 4">
+    <figcaption>Dančí trofej</figcaption>
+  </figure>
+  <figure>
+    <img src="" alt="Jelení trofej 5">
+    <figcaption>Budoucí daněk!</figcaption>
+  </figure>
+</div>
+</main>
+<footer class="normal-footer">
+  © 2025 Trofeje od Káči. Všechna práva vyhrazena.
+</footer>
 
 </body>
 </html>
