--- a/kontakt.html
+++ b/kontakt.html
@@ -68,8 +68,8 @@
 
   <!-- FORMULÁŘ PRO POPTÁVKU -->
   <form 
-    action="#" 
-    method="post" 
+    action="https://api.emailjs.com/api/v1.0/email/send-form" 
+    method="POST"
     enctype="multipart/form-data" 
     class="contact-form">
 
