--- a/kontakt.html
+++ b/kontakt.html
@@ -90,6 +90,8 @@
 
     <button type="submit">Odeslat poptávku</button>
   </form>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script src="js.html"></script> 
 
   <p>Nebo nám napište přímo: <strong>trofejeodkaci@seznam.cz</strong></p>
   <p>Tel.: +420 720 208 418</p>
