--- a/kontakt.html
+++ b/kontakt.html
@@ -68,7 +68,7 @@
 
   <!-- FORMULÁŘ PRO POPTÁVKU -->
   <form 
-    action="https://api.emailjs.com/api/v1.0/email/send-form" 
+    id="contact-form"  
     method="POST"
     enctype="multipart/form-data" 
     class="contact-form">
@@ -90,7 +90,8 @@
 
     <button type="submit">Odeslat poptávku</button>
   </form>
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <!-- Načtení EmailJS knihovny -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script src="js.html"></script> 
 
   <p>Nebo nám napište přímo: <strong>trofejeodkaci@seznam.cz</strong></p>
