--- a/kontakt.html
+++ b/kontakt.html
@@ -93,7 +93,7 @@
 
 <!-- Načtení EmailJS knihovny (musí být před `js.html`) -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script src="js.html"></script> 
+<script src="script.js"></script> 
 
 <p>Nebo nám napište přímo: <strong>trofejeodkaci@seznam.cz</strong></p>
 <p>Tel.: +420 720 208 418</p>
