--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Výrobky z paroží – Domů</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style_responsive.css">
   <script defer src="script.js"></script>
 </head>
 <body>
