--- a/index.html
+++ b/index.html
@@ -29,38 +29,39 @@
   </div>
 
   <header>
-    <!-- NOVÉ: HAMBURGER BUTTON -->
+  <nav>
+    <!-- NOVÉ: HAMBURGER BUTTON UVNITŘ <nav> -->
     <div class="mobile-menu-button">☰</div>
 
-    <nav>
-      <ul>
-        <li class="create-trofej-nav">
-          <a href="kontakt.html" class="create-trofej-btn-nav">
-            Chci vytvořit svou trofej
-          </a>
-        </li>
-        <li><a href="index.html">Domů</a></li>
-        <li class="dropdown">
-          <a href="trofeje.html">Trofeje</a>
-          <ul class="dropdown-menu">
-            <li><a href="jeleni.html">Jelení trofeje</a></li>
-            <li><a href="danci.html">Dančí trofeje</a></li>
-            <li><a href="srnci.html">Srnčí trofeje</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="lovecke-doplnky.html">Lovecké doplňky</a>
-          <ul class="dropdown-menu">
-            <li><a href="noze.html">Nože</a></li>
-            <li><a href="opasky.html">Opasky</a></li>
-            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-          </ul>
-        </li>
-        <li><a href="pred-po.html">Před a Po</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
+    <ul>
+      <li class="create-trofej-nav">
+        <a href="kontakt.html" class="create-trofej-btn-nav">
+          Chci vytvořit svou trofej
+        </a>
+      </li>
+      <li><a href="index.html">Domů</a></li>
+      <li class="dropdown">
+        <a href="trofeje.html">Trofeje</a>
+        <ul class="dropdown-menu">
+          <li><a href="jeleni.html">Jelení trofeje</a></li>
+          <li><a href="danci.html">Dančí trofeje</a></li>
+          <li><a href="srnci.html">Srnčí trofeje</a></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a href="lovecke-doplnky.html">Lovecké doplňky</a>
+        <ul class="dropdown-menu">
+          <li><a href="noze.html">Nože</a></li>
+          <li><a href="opasky.html">Opasky</a></li>
+          <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
+        </ul>
+      </li>
+      <li><a href="pred-po.html">Před a Po</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <section class="carousel">
     <div class="carousel-container">
