--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- HORNÍ BÍLÁ LIŠTA -->
+  <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
   <div class="top-bar">
     <div class="top-bar-container">
       <div class="logo">
@@ -28,41 +28,39 @@
     </div>
   </div>
 
-  <!-- NAVIGACE -->
   <header>
-    <nav>
-      <div class="mobile-menu-button">☰</div>
-      <ul class="menu">
-        <li class="create-trofej-nav">
-          <a href="kontakt.html" class="create-trofej-btn-nav">Chci vytvořit svou trofej</a>
-        </li>
-        <li><a href="index.html">Domů</a></li>
-
-        <li class="dropdown">
-          <a href="trofeje.html" class="dropdown-toggle">Trofeje</a>
-          <ul class="dropdown-menu">
-            <li><a href="jeleni.html">Jelení trofeje</a></li>
-            <li><a href="danci.html">Dančí trofeje</a></li>
-            <li><a href="srnci.html">Srnčí trofeje</a></li>
-          </ul>
-        </li>
-
-        <li class="dropdown">
-          <a href="lovecke-doplnky.html" class="dropdown-toggle">Lovecké doplňky</a>
-          <ul class="dropdown-menu">
-            <li><a href="noze.html">Nože</a></li>
-            <li><a href="opasky.html">Opasky</a></li>
-            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-          </ul>
-        </li>
-
-        <li><a href="pred-po.html">Před a Po</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+ <nav>
+  <div class="mobile-menu-button">☰</div>
+  <ul class="menu">
+    <li class="create-trofej-nav">
+      <a href="kontakt.html" class="create-trofej-btn-nav">
+        Chci vytvořit svou trofej
+      </a>
+    </li>
+    <li><a href="index.html">Domů</a></li>
+    <li class="dropdown">
+      <a href="trofeje.html">Trofeje</a>
+      <ul class="dropdown-menu">
+        <li><a href="jeleni.html">Jelení trofeje</a></li>
+        <li><a href="danci.html">Dančí trofeje</a></li>
+        <li><a href="srnci.html">Srnčí trofeje</a></li>
       </ul>
-    </nav>
-  </header>
+    </li>
+    <li class="dropdown">
+      <a href="lovecke-doplnky.html">Lovecké doplňky</a>
+      <ul class="dropdown-menu">
+        <li><a href="noze.html">Nože</a></li>
+        <li><a href="opasky.html">Opasky</a></li>
+        <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
+      </ul>
+    </li>
+    <li><a href="pred-po.html">Před a Po</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
+  </ul>
+</nav>
+</header>
 
-  <!-- KARUSEL -->
+
   <section class="carousel">
     <div class="carousel-container">
       <img src="Fotky/karusel_1.jpg" alt="Výrobek 1">
@@ -80,7 +78,6 @@
     </div>
   </section>
 
-  <!-- HLAVNÍ OBSAH -->
   <main>
     <section class="uvod">
       <p>Vítejte na našem webu s ručními výrobky z paroží! Nabízíme trofeje, nože, opasky a další doplňky.</p>
@@ -88,10 +85,22 @@
     </section>
   </main>
 
-  <!-- PATIČKA -->
   <footer class="normal-footer">
     © 2025 Trofeje od Káči. Všechna práva vyhrazena.
   </footer>
 
+  <!-- NOVÉ: MOBILNÍ MENU SCRIPT -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const toggleBtn = document.querySelector(".mobile-menu-button");
+      const navList = document.querySelector("nav ul");
+
+      toggleBtn.addEventListener("click", function () {
+        navList.classList.toggle("show");
+      });
+    });
+  </script>
+
 </body>
+
 </html>
