--- a/lovecke-doplnky.html
+++ b/lovecke-doplnky.html
@@ -77,21 +77,8 @@
   </div>
 
   <p>Prohlédněte si také naši galerii loveckých doplňků:</p>
-  <div class="product-gallery">
-    <figure>
-      <img src="nuz1.jpg" alt="Nůž s parožím">
-      <figcaption>Nůž s parožím</figcaption>
-    </figure>
-    <figure>
-      <img src="opasek1.jpg" alt="Kožený opasek">
-      <figcaption>Kožený opasek</figcaption>
-    </figure>
-    <figure>
-      <img src="klobouk-parozi.jpg" alt="Klobouk s parožím">
-      <figcaption>Klobouk s detailním zdobením</figcaption>
-    </figure>
-    <!-- Přidat další dle potřeby -->
-  </div>
+ <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
+
 
 </main>
 <footer class="normal-footer">
