--- a/lovecke-doplnky.html
+++ b/lovecke-doplnky.html
@@ -76,8 +76,7 @@
     <a href="doplnky-parozi.html" class="subcat-link">Doplňky z paroží</a>
   </div>
 
-  <p>Prohlédněte si také naši galerii loveckých doplňků:</p>
- <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
+  <p>Vše pro vás připravujeme...</p>
 
 
 </main>
