--- a/lovecke-doplnky.html
+++ b/lovecke-doplnky.html
@@ -76,8 +76,8 @@
     <a href="doplnky-parozi.html" class="subcat-link">Doplňky z paroží</a>
   </div>
 
-  <p>Vše pro vás připravujeme...</p>
-
+  <p>Prohlédněte si také naši galerii loveckých doplňků:</p>
+ <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
 
 </main>
 <footer class="normal-footer">
