--- a/noze.html
+++ b/noze.html
@@ -69,12 +69,8 @@
 <main>
   <h1>Nože</h1>
   <p>Nože s rukojetí z paroží, různé zdobení... Prohlédněte si naši aktuální nabídku:</p>
-
-      <img src="nuz1.jpg" alt="Nůž 1">
-      <img src="nuz2.jpg" alt="Nůž 2">
-      <img src="nuz3.jpg" alt="Nůž 3">
-
-  <p>Detailní popis, ceny, atd.</p>
+ <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
+  
 </main>
 <footer class="normal-footer">
   © 2025 Trofeje od Káči. Všechna práva vyhrazena.
