--- a/opasky.html
+++ b/opasky.html
@@ -66,11 +66,7 @@
 
 <main>
   <h1>Opasky</h1>
-  <p>Opasky na zmlácení zlých děcek... Prohlédněte si naši aktuální nabídku:</p>
-
-      <img src="nuz1.jpg" alt="Opasek 1">
-      <img src="nuz2.jpg" alt="Opasek 2">
-      <img src="nuz3.jpg" alt="Opasek 3">
+ <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
 
   <p>Detailní popis, ceny, atd.</p>
 </main>
