--- a/doplnky-parozi.html
+++ b/doplnky-parozi.html
@@ -67,11 +67,8 @@
 
 <main>
   <h1>Doplňky z paroží</h1>
-  <p>Doplňky z paroží... Prohlédněte si naši aktuální nabídku:</p>
-    <img src="srnec1.jpg" alt="Srnčí trofej 1">
-    <img src="srnec2.jpg" alt="Srnčí trofej 2">
-    <img src="srnec3.jpg" alt="Srnčí trofej 3">
-  <p>Detailní popis, ceny, atd.</p>
+  <h2 style="text-align: center;">Vše pro vás připravujeme...</h2>
+  
 </main>
 <footer class="normal-footer">
   © 2025 Trofeje od Káči. Všechna práva vyhrazena.
