--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <!-- Logo vlevo -->
       <div class="logo">
         <div class="logo-container">
-          <a href="index.html"><img src="Fotky\logo (2).png" alt="Logo" class="logo"></a>
+          <a href="index.html">
+            <img src="Fotky/logo (2).png" alt="Logo" class="logo">
+          </a>
         </div>
       </div>
       
@@ -80,10 +82,17 @@
     </div>
 
     <!-- Overlay text (hero text) -->
-    <div class="hero-text">
+    <!-- posunuto výš přes top: 25% -->
+    <div class="hero-text" style="top: 25%;">
       <h1>Ruční výroba z paroží</h1>
       <p>Jedinečné trofeje a lovecké doplňky</p>
-      <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
+
+      <div>
+        <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
+      </div>
+      <div style="margin-top: 10px;">
+        <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
+      </div>
     </div>
   </section>
 
@@ -93,7 +102,7 @@
       <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
     </section>
   </main>
-  </main>
+
   <footer class="normal-footer">
     © 2025 Trofeje od Káči. Všechna práva vyhrazena.
   </footer>
