--- a/kontakt.html
+++ b/kontakt.html
@@ -89,8 +89,8 @@
     <label for="phone">Telefon (nepovinné):</label>
     <input type="text" id="phone" name="user_phone" placeholder="+420 123 456 789" />
 
-    <!-- POZOR: žádný name atribut -> EmailJS fotku neposílá, takže nepadá na limitu 50 kB -->
-    <label for="photo">Fotka úlovku (volitelné):</label>
+    <!-- Fotka ÚLOVKU – nepovinné, bez name => EmailJS ji neposílá -->
+    <label for="photo">Fotka úlovku <em>(nepovinné)</em>:</label>
     <input type="file" id="photo" accept="image/*" />
 
     <label for="message">Vaše poptávka / dotaz:</label>
@@ -99,10 +99,29 @@
     <button type="submit">Odeslat poptávku</button>
   </form>
 
-  <!-- Načtení EmailJS knihovny (musí být před script.js) -->
+  <!-- EmailJS knihovna -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <!-- Tvůj existující skript (carousel + EmailJS sendForm) -->
-  <script src="script.js"></script> 
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // stejné údaje jako máš v script.js
+      emailjs.init("IFOtmBtku_1mu_vYD");
+
+      const form = document.getElementById('contact-form');
+
+      form.addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        emailjs.sendForm("service_088u03w", "template_8c9nd5s", this)
+          .then(function () {
+            alert("✅ Zpráva byla úspěšně odeslána!");
+            form.reset();
+          })
+          .catch(function (error) {
+            alert("❌ Chyba při odesílání: " + JSON.stringify(error));
+          });
+      });
+    });
+  </script>
 
   <p>Nebo nám napište přímo: <strong>trofejeodkaci@seznam.cz</strong></p>
   <p>Tel.: +420 720 208 418</p>
