--- a/kontakt.html
+++ b/kontakt.html
@@ -86,10 +86,11 @@
     <label for="email">E-mail:</label>
     <input type="email" id="email" name="user_email" placeholder="vas@email.cz" required />
 
-    <label for="phone">Telefon (nepovinné):</label>
-    <input type="text" id="phone" name="user_phone" placeholder="+420 123 456 789" />
+    <!-- Telefon povinný -->
+    <label for="phone">Telefon:</label>
+    <input type="tel" id="phone" name="user_phone" placeholder="+420 123 456 789" required />
 
-    <!-- Fotka ÚLOVKU – nepovinné, bez name => EmailJS ji neposílá -->
+    <!-- Fotka úlovku – nepovinné, bez name => EmailJS ji neposílá -->
     <label for="photo">Fotka úlovku <em>(nepovinné)</em>:</label>
     <input type="file" id="photo" accept="image/*" />
 
@@ -117,7 +118,8 @@
             form.reset();
           })
           .catch(function (error) {
-            alert("❌ Chyba při odesílání: " + JSON.stringify(error));
+            console.error("EmailJS error:", error);
+            alert("❌ Došlo k chybě při odesílání. Napište prosím přímo na trofejeodkaci@seznam.cz.");
           });
       });
     });
