--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Výrobky z paroží – Domů</title>
+
+  <!-- TITULEK PRO VYHLEDÁVAČE / ZÁLOŽKU -->
+  <title>Trofej z Tvého úlovku</title>
+
+  <!-- POPISEK PRO GOOGLE -->
+  <meta name="description" content="Pečlivě tvoříme trofeje z tvého úlovku. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
+
+  <!-- IKONA WEBU (POUŽIJE SE I VE VYHLEDÁVÁNÍ) -->
+  <link rel="icon" type="image/png" href="Fotky/logo (2).png">
+
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
+
 <body>
 
   <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
@@ -109,3 +119,4 @@
 
 </body>
 </html>
+
