--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Pečlivě tvoříme trofeje z tvého úlovku. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
 
   <!-- IKONA WEBU (POUŽIJE SE I VE VYHLEDÁVÁNÍ) -->
-  <link rel="icon" type="image/png" href="Fotky/logo (2).png">
+  <link rel="icon" type="image/png" href="logo (2).png">
 
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
@@ -119,4 +119,5 @@
 
 </body>
 </html>
+
 
