--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Trofej z Tvého úlovku</title>
 
   <!-- POPISEK PRO GOOGLE -->
-  <meta name="description" content="Pečlivě tvoříme trofeje z tvého úlovku. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
+  <meta name="description" content="Pečlivě tvoříme trofeje z Tvých úlovků. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
 
   <!-- IKONA WEBU (POUŽIJE SE I VE VYHLEDÁVÁNÍ) -->
   <link rel="icon" type="image/png" href="logo (2).png">
@@ -119,5 +119,6 @@
 
 </body>
 </html>
+
 
 
