--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!-- POPISEK PRO GOOGLE -->
   <meta name="description" content="Pečlivě tvoříme trofeje z Tvých úlovků. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
 
-  <!-- IKONA WEBU (POUŽIJE SE I VE VYHLEDÁVÁNÍ) -->
-  <link rel="icon" type="image/png" href="logo (2).png">
+  <!-- IKONA WEBU -->
+  <link rel="icon" type="image/png" href="Fotky/logo (2).png">
 
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
@@ -91,8 +91,7 @@
       <button id="next">&#10095;</button>
     </div>
 
-    <!-- Overlay text (hero text) -->
-    <!-- posunuto výš přes top: 25% -->
+    <!-- Overlay text (hero text) – posunutý výš -->
     <div class="hero-text" style="top: 25%;">
       <h1>Ruční výroba z paroží</h1>
       <p>Jedinečné trofeje a lovecké doplňky</p>
@@ -119,6 +118,3 @@
 
 </body>
 </html>
-
-
-
