--- a/index.html
+++ b/index.html
@@ -52,69 +52,4 @@
         <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
         <li class="create-trofej-nav">
           <a href="kontakt.html" class="create-trofej-btn-nav">
-            Chci vytvořit svou trofej
-          </a>
-        </li>
-        
-        <li><a href="index.html">Domů</a></li>
-        <li class="dropdown">
-          <a href="trofeje.html">Trofeje</a>
-          <ul class="dropdown-menu">
-            <li><a href="jeleni.html">Jelení trofeje</a></li>
-            <li><a href="danci.html">Dančí trofeje</a></li>
-            <li><a href="srnci.html">Srnčí trofeje</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="lovecke-doplnky.html">Lovecké doplňky</a>
-          <ul class="dropdown-menu">
-            <li><a href="noze.html">Nože</a></li>
-            <li><a href="opasky.html">Opasky</a></li>
-            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-          </ul>
-        </li>
-        <li><a href="pred-po.html">Před a Po</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Karusel s overlay textem -->
-  <section class="carousel">
-    <div class="carousel-container">
-      <img src="Fotky/karusel_1.jpg" alt="Výrobek 1">
-      <img src="Fotky/karusel_2.jpg" alt="Výrobek 2">
-      <img src="Fotky/karusel_3.jpg" alt="Výrobek 3">
-    </div>
-    <div class="carousel-controls">
-      <button id="prev">&#10094;</button>
-      <button id="next">&#10095;</button>
-    </div>
-
-    <!-- Overlay text (hero text) – posunutý výš -->
-    <div class="hero-text" style="top: 25%;">
-      <h1>Ruční výroba z paroží</h1>
-      <p>Jedinečné trofeje a lovecké doplňky</p>
-
-      <div>
-        <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
-      </div>
-      <div style="margin-top: 10px;">
-        <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
-      </div>
-    </div>
-  </section>
-
-  <main>
-    <section class="uvod">
-      <p>Vítejte na našem webu s ručními výrobky z paroží! Nabízíme trofeje, nože, opasky a další doplňky.</p>
-      <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
-    </section>
-  </main>
-
-  <footer class="normal-footer">
-    © 2025 Trofeje od Káči. Všechna práva vyhrazena.
-  </footer>
-
-</body>
-</html>
+            Chci vytvořit svou trofe
