--- a/index.html
+++ b/index.html
@@ -1,55 +1,82 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+document.addEventListener('DOMContentLoaded', () => {
+  // ==============================
+  // 1) HLAVNÍ CAROUSEL (úvodní fotky)
+  // ==============================
+  const container = document.querySelector('.carousel-container');
+  const images = document.querySelectorAll('.carousel img');
+  const prevButton = document.getElementById('prev');
+  const nextButton = document.getElementById('next');
 
-  <!-- TITULEK PRO VYHLEDÁVAČE / ZÁLOŽKU -->
-  <title>Trofej z Tvého úlovku</title>
+  if (container && images.length && prevButton && nextButton) {
+    let index = 0;
 
-  <!-- POPISEK PRO GOOGLE -->
-  <meta name="description" content="Pečlivě tvoříme trofeje z Tvých úlovků. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
+    function updateCarousel() {
+      container.style.transform = `translateX(${-index * 100}vw)`;
+    }
 
-  <!-- IKONA WEBU -->
-  <link rel="icon" type="image/png" href="Fotky/logo (2).png">
+    function showSlide(i) {
+      index = (i + images.length) % images.length;
+      updateCarousel();
+    }
 
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
-</head>
+    nextButton.addEventListener('click', () => showSlide(index + 1));
+    prevButton.addEventListener('click', () => showSlide(index - 1));
 
-<body>
+    // Automatické posouvání každých 5 sekund
+    setInterval(() => showSlide(index + 1), 5000);
+  }
 
-  <!-- NOVÁ BÍLÁ LIŠTA NAHOŘE -->
-  <div class="top-bar">
-    <div class="top-bar-container">
-      <!-- Logo vlevo -->
-      <div class="logo">
-        <div class="logo-container">
-          <a href="index.html">
-            <img src="Fotky/logo (2).png" alt="Logo" class="logo">
-          </a>
-        </div>
-      </div>
-      
-      <!-- Kontakty a Instagram vpravo -->
-      <div class="contact">
-        <a href="mailto:trofejeodkaci@seznam.cz">trofejeodkaci@seznam.cz</a>
-        <span>|</span>
-        <span>+420 720 208 418</span>
-        
-        <!-- Instagram ikona vedle kontaktů -->
-        <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
-          <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-        </a>
-      </div>
-    </div>
-  </div>
-  
+  // ==============================
+  // 2) CAROUSEL "PŘED A PO" NA HLAVNÍ STRÁNCE
+  // ==============================
+  const baSlides = document.querySelectorAll('.before-after-carousel .before-after');
+  const baPrev = document.getElementById('ba-prev');
+  const baNext = document.getElementById('ba-next');
 
-  <header>
-    <nav>
-      <ul>
-        <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-        <li class="create-trofej-nav">
-          <a href="kontakt.html" class="create-trofej-btn-nav">
-            Chci vytvořit svou trofe
+  if (baSlides.length && baPrev && baNext) {
+    let baIndex = 0;
+
+    function showBaSlide(i) {
+      baIndex = (i + baSlides.length) % baSlides.length;
+
+      baSlides.forEach((slide, idx) => {
+        slide.style.display = idx === baIndex ? 'flex' : 'none';
+      });
+    }
+
+    // Inicializace – zobrazí první dvojici Před/Po
+    showBaSlide(0);
+
+    baPrev.addEventListener('click', () => showBaSlide(baIndex - 1));
+    baNext.addEventListener('click', () => showBaSlide(baIndex + 1));
+  }
+
+  // ==============================
+  // 3) EMAILJS – formulář (pro starší stránky, pokud používáš)
+  // ==============================
+  if (typeof emailjs !== "undefined") {
+    emailjs.init("IFOtmBtku_1mu_vYD"); // Tvůj USER ID z EmailJS
+  } else {
+    console.error("❌ Chyba: EmailJS není načteno. Ujisti se, že máš správně vložený <script> v HTML.");
+  }
+
+  const form = document.getElementById('contact-form');
+  if (form) {
+    form.addEventListener('submit', function(event) {
+      event.preventDefault(); // Zabrání reloadu stránky
+
+      emailjs.sendForm("service_088u03w", "template_8c9nd5s", this)
+        .then(() => {
+          alert("✅ Zpráva byla úspěšně odeslána!");
+          form.reset(); // Vyčistí formulář po odeslání
+        })
+        .catch((error) => {
+          alert("❌ Chyba při odesílání: " + JSON.stringify(error));
+        });
+    });
+  } else {
+    console.warn("⚠️ Formulář #contact-form nebyl nalezen na stránce.");
+  }
+
+  console.log("✅ JS se načetl a spustil!");
+});
