--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <!-- Overlay text (hero text) – posunutý výš -->
     <div class="hero-text" style="top: 25%;">
-      <h1>Ruční výroba z paroží</h1>
-      <p>Jedinečné trofeje a lovecké doplňky</p>
+      <h1>Zakázková výroba trofejí</h1>
+      <p>Ruční bělění lebek a úprava paroží</p>
 
       <div>
         <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
