--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Overlay text (hero text) – posunutý výš -->
     <div class="hero-text" style="top: 25%;">
       <h1>Zakázková výroba trofejí</h1>
-      <p>Ruční bělění lebek a úprava paroží</p>
+      <p>Pečlivé bělění lebek a úprava paroží</p>
 
       <div>
         <a href="trofeje.html" class="btn-cta">Podívat se na trofeje</a>
@@ -178,4 +178,5 @@
 
 </body>
 </html>
+
 
