--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <main>
     <section class="uvod">
-      <p>Vítejte na našem webu s ručními výrobky z paroží! Nabízíme trofeje, nože, opasky a další doplňky.</p>
+      <p>Vítejte na našem webu! Zabýváme se zakázkovou výrobou trofejí, bělení lebek a úpravou paroží.  </p>
       <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
     </section>
   </main>
@@ -178,5 +178,6 @@
 
 </body>
 </html>
+
 
 
