--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Trofej z Tvého úlovku</title>
 
   <!-- POPISEK PRO GOOGLE -->
-  <meta name="description" content="Pečlivě tvoříme trofeje z Tvých úlovků. Mrkni na naše hotové trofeje zvěře pro doživotní zážitek!">
+  <meta name="description" content="Zakázková výroba loveckých trofejí – bělení lebek a profesionální úprava paroží. Šetrné zpracování, individuální přístup, možnost renovace starých trofejí. Přeměníme váš úlovek v reprezentativní trofej.!">
 
   <!-- IKONA WEBU -->
   <link rel="icon" type="image/png" href="Fotky/logo (2).png">
@@ -167,7 +167,7 @@
 
   <main>
     <section class="uvod">
-      <p>Vítejte na našem webu! Zabýváme se zakázkovou výrobou trofejí, bělení lebek a úpravou paroží.  </p>
+      <p> Zabýváme se zakázkovou výrobou trofejí, bělení lebek a úpravou paroží. Provádíme odborné bělení lebek trofejové zvěře (srnec, jelen, daněk, muflon, prase divoké a další). Pracujeme šetrnými postupy, aby nedošlo k poškození kosti nebo uvolnění zubů. Výsledkem je čistá, rovnoměrně vybělená lebka s přirozeným vzhledem, připravená k montáži na štítek nebo k zavěšení.  </p>
       <p>Prohlédněte si naši práci a pořiďte si vlastní kousek!</p>
     </section>
   </main>
@@ -178,6 +178,7 @@
 
 </body>
 </html>
+
 
 
 
