--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </li>
         <li><a href="pred-po.html">Před a Po</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
       </ul>
     </nav>
   </header>
@@ -178,6 +179,7 @@
 
 </body>
 </html>
+
 
 
 
