--- a/pred-po.html
+++ b/pred-po.html
@@ -61,6 +61,7 @@
       </li>
       <li><a href="pred-po.html">Před a Po</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
+      <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
     </ul>
   </nav>
 </header>
@@ -119,3 +120,4 @@
 
 </body>
 </html>
+
