--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -64,19 +64,32 @@
 </header>
 
 <main>
-  <h1>Jak to probíhá</h1>
-  <p>Jednoduchý postup, jak z tvého úlovku vznikne hotová trofej:</p>
+  <h1>Jak to probíhá – jednoduchý proces</h1>
 
-  <ol>
-    <li><strong>Ozvi se mi</strong> – napiš e-mail nebo zavolej, pošli fotku úlovku a řekni, jakou trofej si představuješ.</li>
-    <li><strong>Domluvíme detaily</strong> – typ úpravy, podložku, orientační cenu a způsob předání trofeje.</li>
-    <li><strong>Předání trofeje</strong> – předáš mi hlavu/lebku, případně další části, které chceš do trofeje zakomponovat.</li>
-    <li><strong>Práce na trofeji</strong> – bělení, úprava, montáž na podložku, doladění detailů podle domluvy.</li>
-    <li><strong>Hotová trofej</strong> – pošlu ti fotku, domluvíme předání a doplatek. Trofej je připravená dělat radost.</li>
-  </ol>
+  <section class="uvod">
+    <p>Čtyři jednoduché kroky od nápadu k hotové trofeji z tvého úlovku.</p>
+  </section>
 
-  <p>Chceš začít hned?</p>
-  <p><a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a></p>
+  <section class="proces-kroky">
+    <h2>Napiš nám / zavolej</h2>
+    <p>Pošlete nám fotku trofeje a napište, co si přejete (bělení, úprava paroží, nový štítek…).</p>
+
+    <h2>Domluva + orientační cena</h2>
+    <p>Dohodneme možnosti úpravy a přibližnou cenu. U složitějších zakázek navrhneme více variant.</p>
+
+    <h2>Doručení trofeje</h2>
+    <p>Trofej nám můžete předat osobně nebo zaslat pečlivě zabalenou.</p>
+
+    <h2>Zpracování a předání</h2>
+    <p>Trofej odborně upravíme a po dokončení vás kontaktujeme. Pak následuje předání / zaslání zpět.</p>
+  </section>
+
+  <section class="uvod">
+    <p>
+      Chceš začít hned?  
+      <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
+    </p>
+  </section>
 </main>
 
 <footer class="normal-footer">
