--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -85,7 +85,8 @@
   </section>
 
   <section class="uvod">
-    <p>  
+    <p>
+      Chceš začít hned?  
       <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
     </p>
   </section>
