--- a/lovecke-doplnky.html
+++ b/lovecke-doplnky.html
@@ -61,6 +61,7 @@
           <li><a href="pred-po.html">Před a Po</a></li>
         </li>
         <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
       </ul>
     </nav>
   </header>
@@ -86,3 +87,4 @@
 
 </body>
 </html>
+
