--- a/danci.html
+++ b/danci.html
@@ -32,39 +32,38 @@
     </div>
   </div>
 
-  <header>
-    <nav>
-      <ul>
-         <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-         <li class="create-trofej-nav">
-          <a href="kontakt.html" class="create-trofej-btn-nav">
-            Chci vytvořit svou trofej
-          </a>
-        </li>
-        
-        <li><a href="index.html">Domů</a></li>
-  
-        <li class="dropdown">
-          <a href="trofeje.html">Trofeje</a>
-          <ul class="dropdown-menu">
-            <li><a href="jeleni.html">Jelení trofeje</a></li>
-            <li><a href="danci.html">Dančí trofeje</a></li>
-            <li><a href="srnci.html">Srnčí trofeje</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="lovecke-doplnky.html">Lovecké doplňky</a>
-          <ul class="dropdown-menu">
-            <li><a href="noze.html">Nože</a></li>
-            <li><a href="opasky.html">Opasky</a></li>
-            <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
-          </ul>
-          <li><a href="pred-po.html">Před a Po</a></li>
-        </li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
+ <header>
+  <nav>
+    <ul>
+      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
+      <li class="create-trofej-nav">
+        <a href="kontakt.html" class="create-trofej-btn-nav">
+          Chci vytvořit svou trofej
+        </a>
+      </li>
+      <li><a href="index.html">Domů</a></li>
+      <li class="dropdown">
+        <a href="trofeje.html">Trofeje</a>
+        <ul class="dropdown-menu">
+          <li><a href="jeleni.html">Jelení trofeje</a></li>
+          <li><a href="danci.html">Dančí trofeje</a></li>
+          <li><a href="srnci.html">Srnčí trofeje</a></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a href="lovecke-doplnky.html">Lovecké doplňky</a>
+        <ul class="dropdown-menu">
+          <li><a href="noze.html">Nože</a></li>
+          <li><a href="opasky.html">Opasky</a></li>
+          <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
+        </ul>
+      </li>
+      <li><a href="pred-po.html">Před a Po</a></li>
+      <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+  </nav>
+</header>
 <main>
   <h1>Daněk</h1>
   <p>Naše výrobky...</p>
@@ -96,3 +95,4 @@
 
 </body>
 </html>
+
