--- a/srnci.html
+++ b/srnci.html
@@ -34,15 +34,13 @@
 <header>
   <nav>
     <ul>
-       <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
-       <li class="create-trofej-nav">
+      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
+      <li class="create-trofej-nav">
         <a href="kontakt.html" class="create-trofej-btn-nav">
           Chci vytvořit svou trofej
         </a>
       </li>
-      
       <li><a href="index.html">Domů</a></li>
-
       <li class="dropdown">
         <a href="trofeje.html">Trofeje</a>
         <ul class="dropdown-menu">
@@ -58,8 +56,9 @@
           <li><a href="opasky.html">Opasky</a></li>
           <li><a href="doplnky-parozi.html">Doplňky z paroží</a></li>
         </ul>
-        <li><a href="pred-po.html">Před a Po</a></li>
       </li>
+      <li><a href="pred-po.html">Před a Po</a></li>
+      <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
@@ -139,3 +138,4 @@
 
 </body>
 </html>
+
