--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -34,6 +34,7 @@
 <header>
   <nav>
     <ul>
+      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
       <li class="create-trofej-nav">
         <a href="kontakt.html" class="create-trofej-btn-nav">
           Chci vytvořit svou trofej
@@ -57,8 +58,8 @@
         </ul>
       </li>
       <li><a href="pred-po.html">Před a Po</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
       <li><a href="jak-to-probiha.html">Jak to probíhá</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
 </header>
