--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -34,7 +34,6 @@
 <header>
   <nav>
     <ul>
-      <!-- ORANŽOVÉ TLAČÍTKO V MENU: VYTVOŘIT TROFEJ -->
       <li class="create-trofej-nav">
         <a href="kontakt.html" class="create-trofej-btn-nav">
           Chci vytvořit svou trofej
@@ -67,27 +66,26 @@
 <main>
   <h1>Jak to probíhá – jednoduchý proces</h1>
 
-  <section class="uvod">
-    <p>Čtyři jednoduché kroky od nápadu k hotové trofeji z tvého úlovku.</p>
-  </section>
-
   <section class="proces-kroky">
-    <h2>Napiš nám / zavolej</h2>
-    <p>Pošlete nám fotku trofeje a napište, co si přejete (bělení, úprava paroží, nový štítek…).</p>
+    <ul class="proces-list">
+      <li>
+        <strong>Napiš nám / zavolej</strong> – pošli fotku trofeje a napiš, co si přeješ
+        (bělení, úprava paroží, nový štítek…).
+      </li>
+      <li>
+        <strong>Domluva + orientační cena</strong> – dohodneme možnosti úpravy a přibližnou cenu.
+        U složitějších zakázek navrhneme více variant.
+      </li>
+      <li>
+        <strong>Doručení trofeje</strong> – trofej nám můžeš předat osobně nebo ji zaslat pečlivě zabalenou.
+      </li>
+      <li>
+        <strong>Zpracování a předání</strong> – trofej odborně upravíme a po dokončení se ozveme.
+        Domluvíme předání nebo zaslání zpět.
+      </li>
+    </ul>
 
-    <h2>Domluva + orientační cena</h2>
-    <p>Dohodneme možnosti úpravy a přibližnou cenu. U složitějších zakázek navrhneme více variant.</p>
-
-    <h2>Doručení trofeje</h2>
-    <p>Trofej nám můžete předat osobně nebo zaslat pečlivě zabalenou.</p>
-
-    <h2>Zpracování a předání</h2>
-    <p>Trofej odborně upravíme a po dokončení vás kontaktujeme. Pak následuje předání / zaslání zpět.</p>
-  </section>
-
-  <section class="uvod">
     <p>
-      Chceš začít hned?  
       <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
     </p>
   </section>
