--- a/jak-to-probiha.html
+++ b/jak-to-probiha.html
@@ -64,26 +64,27 @@
 </header>
 
 <main>
-  <h1>Jak to probíhá – jednoduchý proces</h1>
-
   <section class="proces-kroky">
-    <ul class="proces-list">
+    <p><strong>Jak to probíhá – jednoduchý proces</strong></p>
+
+    <ol class="proces-list">
       <li>
-        <strong>Napiš nám / zavolej</strong> – pošli fotku trofeje a napiš, co si přeješ
-        (bělení, úprava paroží, nový štítek…).
+        <strong>Napiš nám / zavolej:</strong>
+        pošli fotku trofeje a napiš, co si přeješ (bělení, úprava paroží, nový štítek…).
       </li>
       <li>
-        <strong>Domluva + orientační cena</strong> – dohodneme možnosti úpravy a přibližnou cenu.
-        U složitějších zakázek navrhneme více variant.
+        <strong>Domluva + orientační cena:</strong>
+        dohodneme možnosti úpravy a přibližnou cenu. U složitějších zakázek navrhneme více variant.
       </li>
       <li>
-        <strong>Doručení trofeje</strong> – trofej nám můžeš předat osobně nebo ji zaslat pečlivě zabalenou.
+        <strong>Doručení trofeje:</strong>
+        trofej nám můžeš předat osobně nebo ji zaslat pečlivě zabalenou.
       </li>
       <li>
-        <strong>Zpracování a předání</strong> – trofej odborně upravíme a po dokončení se ozveme.
-        Domluvíme předání nebo zaslání zpět.
+        <strong>Zpracování a předání:</strong>
+        trofej odborně upravíme a po dokončení se ozveme. Domluvíme předání nebo zaslání zpět.
       </li>
-    </ul>
+    </ol>
 
     <p>
       <a href="kontakt.html" class="btn-cta">Chci vytvořit svou trofej</a>
