--- a/kontakt.html
+++ b/kontakt.html
@@ -75,31 +75,30 @@
   </p>
 
   <!-- FORMULÁŘ PRO POPTÁVKU -->
-  <form 
+  <!-- FORMULÁŘ PRO POPTÁVKU -->
+<form 
     id="contact-form"  
     method="POST"
     enctype="multipart/form-data" 
     class="contact-form">
 
     <label for="name">Jméno:</label>
-    <input type="text" id="name" name="user_name" placeholder="Vaše jméno" required />
+    <input type="text" id="name" name="from_name" placeholder="Vaše jméno" required />
 
     <label for="email">E-mail:</label>
-    <input type="email" id="email" name="user_email" placeholder="vas@email.cz" required />
+    <input type="email" id="email" name="reply_to" placeholder="vas@email.cz" required />
 
-    <!-- Telefon povinný -->
-    <label for="phone">Telefon:</label>
-    <input type="tel" id="phone" name="user_phone" placeholder="+420 123 456 789" required />
+    <label for="phone">Telefon (povinné):</label>
+    <input type="text" id="phone" name="phone" placeholder="+420 123 456 789" required />
 
-    <!-- Fotka úlovku – nepovinné, bez name => EmailJS ji neposílá -->
     <label for="photo">Fotka úlovku <em>(nepovinné)</em>:</label>
-    <input type="file" id="photo" accept="image/*" />
+    <input type="file" id="photo" name="photo" accept="image/*" />
 
     <label for="message">Vaše poptávka / dotaz:</label>
-    <textarea id="message" name="user_message" rows="5" placeholder="Popište nám, co si přejete vyrobit..."></textarea>
+    <textarea id="message" name="message" rows="5" placeholder="Popište nám, co si přejete vyrobit..." required></textarea>
 
     <button type="submit">Odeslat poptávku</button>
-  </form>
+</form>
 
   <!-- EmailJS knihovna -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -137,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
