--- a/kontakt.html
+++ b/kontakt.html
@@ -75,7 +75,7 @@
   </p>
 
   <!-- FORMULÁŘ PRO POPTÁVKU -->
-  <  <!-- FORMULÁŘ PRO POPTÁVKU -->
+  <!-- FORMULÁŘ PRO POPTÁVKU -->
 <form 
     id="contact-form"  
     method="POST"
@@ -145,6 +145,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
