--- a/kontakt.html
+++ b/kontakt.html
@@ -91,8 +91,13 @@
     <label for="phone">Telefon (povinné):</label>
     <input type="text" id="phone" name="phone" placeholder="+420 123 456 789" required />
 
-    <label for="photo">Fotka úlovku <em>(nepovinné, max. cca 50 kB)</em>:</label>
-    <input type="file" id="photo" name="photo" accept="image/*" />
+        <label for="photo_url">Odkaz na fotku úlovku <em>(nepovinné)</em>:</label>
+    <input
+      type="url"
+      id="photo_url"
+      name="photo_url"
+      placeholder="https://... (např. odkaz z Google Fotek nebo úschovny)"
+    />
 
     <label for="message">Vaše poptávka / dotaz:</label>
     <textarea id="message" name="message" rows="5" placeholder="Popište nám, co si přejete vyrobit..." required></textarea>
@@ -145,6 +150,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
