--- a/kontakt.html
+++ b/kontakt.html
@@ -96,7 +96,7 @@
       type="url"
       id="photo_url"
       name="photo_url"
-      placeholder="https://... (např. odkaz z Google Fotek nebo úschovny)"
+      placeholder="https://... (např. odkaz z Google Fotek, úschovny nebo pošli na WhatsApp)"
     />
 
     <label for="message">Vaše poptávka / dotaz:</label>
@@ -150,6 +150,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
