--- a/index.html
+++ b/index.html
@@ -38,10 +38,20 @@
         <span>+420 720 208 418</span>
         
         <!-- Instagram ikona vedle kontaktů -->
-        <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
-          <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-        </a>
-      </div>
+   <div class="social-icons">
+  <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
+    <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+  </a>
+
+  <a
+    href="https://wa.me/420720208418?text=Zdrav%C3%ADm%2C%20m%C3%A1m%20z%C3%A1jem%20o%20trofej%20z%20m%C3%A9ho%20%C3%BAlovku."
+    target="_blank"
+    class="whatsapp-icon"
+  >
+    <img src="Fotky/whatsapp-icon.png" alt="WhatsApp">
+  </a>
+</div>
+
     </div>
   </div>
   
@@ -180,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
