--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
         <span>|</span>
         <span>+420 720 208 418</span>
         
-        <!-- Instagram ikona vedle kontaktů -->
-   <div class="social-icons">
-  <a href="https://www.instagram.com/trofejeodkaci/" target="_blank" class="instagram-icon">
-    <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
-  </a>
 
   <a
     href="https://wa.me/420720208418?text=Zdrav%C3%ADm%2C%20m%C3%A1m%20z%C3%A1jem%20o%20trofej%20z%20m%C3%A9ho%20%C3%BAlovku."
@@ -187,9 +182,24 @@
   <footer class="normal-footer">
     © 2025 Trofeje od Káči. Všechna práva vyhrazena.
   </footer>
+<!-- Plovoucí ikony WhatsApp + Instagram -->
+<a href="https://wa.me/420720208418" 
+   class="floating-icon floating-whatsapp" 
+   target="_blank" 
+   aria-label="Napsat na WhatsApp">
+  <img src="Fotky/whatsapp.png" alt="WhatsApp">
+</a>
+
+<a href="https://www.instagram.com/trofejeodkaci/" 
+   class="floating-icon floating-instagram" 
+   target="_blank" 
+   aria-label="Instagram Trofeje od Káči">
+  <img src="Fotky/instagram-icon_1057-2227.avif" alt="Instagram">
+</a>
 
 </body>
 </html>
+
 
 
 
